Setting location to a mailto: URI should not throw if there is a system mailto: handler.  Bug 236589, r=biesi, sr=darin